--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Estimator</title>
     <link rel="stylesheet" href="./global.css">
+    <script defer src="./bundle.js"></script>
 </head>
 <body>
 
